# kraken

./: .env  .gitignore  Cargo.toml  Dockerfile  build.sh  create-database.sh  db_schema.sql  docker-compose.yaml  dump.sql  my_database.db  package.json  pnpm-lock.yaml  postgres_schema.sql  schema.sql
bindings/: CityExtendedSchema.ts  CityInsert.ts  CitySummarizedSchema.ts  CityUpdate.ts  CountryExtendedSchema.ts  CountryInsert.ts  CountrySummarizedSchema.ts  CountryUpdate.ts  InsertCountry.ts  InsertUser.ts  UpdateCountry.ts  UserInsert.ts  UserUpdate.ts
frontend-main/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend-main/src/: App.tsx  router.ts
frontend-office/: .env.development  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-office/src/: index.css  main.tsx  router.ts
public/: index.html  index.js
public/cdn/: new.min.css  vue.global.js
src/: api.rs  ctx.rs  db.rs  lib.rs  main.rs  mc.rs  models.rs  pages.rs  rpc.rs
src/clients/: city_client.rs  country_client.rs
src/macros/: auth_macro.rs  get_user_model.rs
src/middlewares/: auth.rs  auth_middleware.rs  require_auth.rs
src/models/: auth_model.rs  city_model.rs  country_model.rs  user_model.rs
src/routers/: askama_router.rs  auth_router.rs  city_router.rs  country_router.rs  rpc_router.rs  spa_router.rs
src/schemas/: city_schema.rs  (+1 more)
templates/: city.template.html  countries.template.html  country.template.html
test/: bun.lockb  countries.test.ts  index.test.js  jsonrpc.ts  math.test.ts  package.json  sse.ts
(+27 files in other folders)
