[package]
name = "kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
axum = { version = "0.6.20", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["fs", "cors"] }
tower-cookies = { version = "0.10.0" }
cookie = "0.16"
jsonwebtoken = "9"
chrono = "0.4.31"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"